# Spotlight-Search

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  backend.cpp  backend.h  main.cpp  package.bat
